# Rainb0w

./: .gitignore  01-install-requirements.sh  02-install-docker.sh  CHANGELOG.md  README.md  colors.sh  config.sh  installer.sh  notice.txt  pyproject.toml  requirements.txt  run.sh
Docker/: rainb0w_config.toml  rainb0w_users.toml
Docker/blocky/: docker-compose.yml
Docker/caddy/: Dockerfile  docker-compose.yml
Docker/hysteria/: docker-compose.yml
Docker/mtproto/: docker-compose.yml
Docker/mtprotopy/: Dockerfile  docker-compose.yml  mtprotopy.py
Docker/sing-box/: docker-compose.yml
Docker/wordpress/: Dockerfile  db.env  docker-compose.yml  entrypoint.sh  wp.env
Docker/xray/: docker-compose.yml
lib/: configurator.py  dashboard.py
lib/base/: colors.py  config.py
lib/post-deploy/: get_client_url.py  get_domain_type.py  get_first_username.py  get_hysteria_port_range.py
lib/proxy/: blocky.py  caddy.py  hysteria.py  mtproto.py  naiveproxy.py  xray.py
lib/shell/: deploy.sh  uninstall.sh  update.sh
lib/user/: user_manager.py
lib/utils/: ac_utils.py  domain_utils.py  helper.py  os_utils.py  wp_utils.py
scripts/: 00-pre-requisites.sh  01-install-requirements.sh  01-setup-server.sh  colors.sh  config.sh  func.sh  func_ac.sh  func_caddy.sh  func_dns.sh  func_docker.sh  func_hysteria.sh  func_mtproto.sh  func_performance.sh  func_xray.sh  install-requirements.sh  xt_geoip_build_agg  xt_geoip_update.sh
src/: configurator.py  dashboard.py
src/base/: config.py
src/proxy/: caddy.py  singbox.py
src/shell/: deploy.sh  uninstall.sh  update.sh
(+66 files in other folders)
